# Arithmitics_repository

./: .travis.yml  CMakeLists.txt  README.md
Arithmetics/: Arithmetics.cpp  Arithmetics.h  CMakeLists.txt
StackLib/: Stack.h
main/: ArithmeticsTestMain.cpp  CMakeLists.txt
test/: CMakeLists.txt  test_arithmetics.cpp
